Fix the nav aligning right error

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -228,7 +228,6 @@
   }
 }
 
-
 /* Bottom Nav Bar */
 .container {
   display: flex;
@@ -250,6 +249,7 @@
   display: flex;
   justify-content: center;
   gap: 20px;
+  padding: 0;
 }
 
 .navigation li {
@@ -265,8 +265,6 @@
   color: #007bff;
 }
 
-
-
 /* Profile */
 .container {
   max-width: 800px;
@@ -279,8 +277,8 @@
   border-radius: 8px;
   padding: 20px;
   display: flex;
-  flex-direction: column; 
-  align-items: center; 
+  flex-direction: column;
+  align-items: center;
   height: 660px;
   width: 300px;
 }
@@ -290,8 +288,8 @@
   border-radius: 8px;
   padding: 20px;
   display: flex;
-  flex-direction: column; 
-  align-items: center; 
+  flex-direction: column;
+  align-items: center;
   min-height: 40px;
   width: 220px;
 }
@@ -303,7 +301,7 @@
 }
 
 .profileImageContainer {
-  margin-bottom: 20px; 
+  margin-bottom: 20px;
 }
 
 .profileImage {
@@ -321,12 +319,11 @@
   flex-shrink: 0;
 }
 
-
 .profileInfo {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center; 
+  text-align: center;
 }
 
 .profileName {
